[package]
name = "pacemaker"
version = "0.1.0"
edition = "2021"
authors = ["Oighty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
artemis-core = { git = "https://github.com/Oighty/artemis" }
async-trait = "^0.1"
clap = { version = "^4.2.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
ethers = { version = "^2.0", features = ["rustls", "ws"]}
reqwest = "^0.11"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = "^1.21.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "registry"] }
